# bond-data-pipeline

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md
.husky/: pre-commit  pre-push
docs/dq/: 2026-07-18_204341_full-dq-assessment.md
docs/research/: 2026-07-18_112508_bondcentral-api-exploration.md  2026-07-18_112508_bondcentral.in.md  2026-07-18_113141_ccilindia.com.md  2026-07-18_113141_cdslindia.com.md  2026-07-18_113141_nseindia.com.md  2026-07-18_113141_sebi.gov.in.md  2026-07-18_120554_fbil.org.in.md  2026-07-18_120554_rbi.org.in.md
migrations/: env.py
migrations/versions/: 00bc6d5f7fc3_initial_schema.py  45cb274a85f3_idempotency_unique_constraints_on_runs_.py  522a4940aab4_trades_table.py  55fdc87faa72_data_quality_interest_type_dq_checks_.py  92fb5df8745f_public_issues_table_sebi.py  b7e1a2c4d5f6_widen_interest_type.py  bed81f16f24a_rbi_auctions_table.py  e42c25cd4a00_etl_file_metrics_table.py
scripts/: README.md  run_daily_ingest.sh
scripts/launchd/: com.cydratech.bonds-ingest.plist
scripts/systemd/: bonds-ingest.service  bonds-ingest.timer
src/bonds/: __init__.py  calendar.py  cli.py  config.py  logging.py
src/bonds/http/: __init__.py  client.py
src/bonds/models/: __init__.py  records.py
src/bonds/pipelines/: __init__.py  base.py  catchup.py  enrichment.py  public_issue.py  rbi_auction.py  sovereign_valuation.py  suite.py  trade.py  universe.py
src/bonds/quality/: __init__.py  assessment.py  checks.py  inspector.py  isin.py  metrics.py
src/bonds/sources/: __init__.py  base.py  bondcentral.py  ccil.py  ccil_historical.py  cdsl.py  fbil.py  nse.py  rbi.py  sebi.py
src/bonds/storage/: __init__.py  database.py  repositories.py  schema.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_universe.py
tests/integration/pipelines/: test_public_issue.py  test_rbi_auction.py  test_sovereign_valuation.py  test_trade.py  test_universe.py
tests/integration/quality/: test_assessment.py
tests/integration/storage/: test_ingestion_runs.py  test_securities.py
tests/unit/: test_calendar.py  test_config.py  test_http_client.py
tests/unit/models/: test_records.py
tests/unit/pipelines/: test_catchup.py  test_suite.py
tests/unit/quality/: test_assessment.py  test_checks.py  test_isin.py  test_metrics.py
tests/unit/sources/: test_bondcentral.py  test_ccil.py  test_ccil_historical.py  test_cdsl.py  test_fbil.py  test_nse.py  test_rbi.py  test_sebi.py
