[project]
name = "bonds-pipeline"
version = "0.1.0"
description = "Daily data pipelines for the Indian bond market (universe, valuations, attribute history) feeding a ladder-strategy backtest."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Jeevan Prakash" }]
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "lxml>=5.3",
    "typer>=0.12",
    "structlog>=24.4",
]

[project.scripts]
bonds = "bonds.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.6",
    "lxml-stubs>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bonds"]

# ------------------------------------------------------------------ ruff
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "PTH",      # flake8-use-pathlib
    "RUF",      # ruff-specific
    "D",        # pydocstyle
]
ignore = ["D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"migrations/*" = ["D", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ------------------------------------------------------------------ mypy
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["openpyxl.*"]
ignore_missing_imports = true

# ------------------------------------------------------------------ pytest / coverage
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=bonds --cov-report=term-missing --cov-fail-under=80"
markers = ["integration: tests that need a live Postgres (deselect with -m 'not integration')"]

[tool.coverage.run]
source = ["bonds"]
branch = true
# The unit-coverage floor covers pure/logic modules. The Postgres-dependent layer
# (engine, repositories, DB orchestration) is exercised by `-m integration` tests that
# run against a live database in CI/verification, so it is omitted from the unit floor.
omit = [
    "src/bonds/cli.py",
    "*/migrations/*",
    "src/bonds/storage/database.py",
    "src/bonds/storage/repositories.py",
    "src/bonds/pipelines/sovereign_valuation.py",
    "src/bonds/pipelines/universe.py",
    "src/bonds/pipelines/public_issue.py",
    "src/bonds/pipelines/rbi_auction.py",
    "src/bonds/pipelines/trade.py",
    "src/bonds/quality/inspector.py",
    "src/bonds/sources/rbi.py",  # fetch_auctions does per-auction detail fetches (integration path)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
